--- a/lib/libipt/Makefile
+++ b/lib/libipt/Makefile
@@ -17,7 +17,6 @@ LIB=	ipt
 SHLIB_MAJOR=0
 
 SRCS=	\
-	init.c				\
 	pt_asid.c			\
 	pt_block_cache.c		\
 	pt_block_decoder.c		\
@@ -58,7 +57,8 @@ CFLAGS+=	\
 	-DPT_VERSION_BUILD=0	\
 	-DPT_VERSION_EXT=\"\"	\
 	-DPT_VERSION_MAJOR=1	\
-	-DPT_VERSION_MINOR=6
+	-DPT_VERSION_MINOR=6	\
+	-DPT_VERSION_PATCH=0
 
 INCS=	\
 	intel-pt.h	\
